# tsid

./: .cirrus.yml  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  dependencies.rosinstall  flake.nix  package.xml  pyproject.toml
.github/workflows/: ci-linux-osx-conda.yml  ci-linux-ros.yml  macos-linux-pip.yml  nix.yml  release.yml  ros_ci.yml  update-flake-lock.yml  wheel.yml
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  __init__.py  module.cpp  tsidpy.pc.cmake
bindings/python/constraint/: constraint-bound.cpp  constraint-bound.hpp  constraint-equality.cpp  constraint-equality.hpp  constraint-inequality.cpp  constraint-inequality.hpp  expose-constraints.hpp
bindings/python/contacts/: contact-6d.cpp  contact-6d.hpp  contact-point.cpp  contact-point.hpp  contact-two-frame-positions.cpp  contact-two-frames.cpp  contact.cpp  contact.hpp  expose-contact.hpp  measured-6Dwrench.cpp  measured-6d-wrench.cpp
bindings/python/formulations/: expose-formulations.hpp  formulation.cpp  formulation.hpp
bindings/python/math/: utils.cpp
bindings/python/measured-forces/: measured-force-3Dforce.cpp  measured-force-6Dwrench.cpp
bindings/python/measuredForces/: measured-force-3Dforce.cpp  measured-force-6Dwrench.cpp
bindings/python/robots/: expose-robots.hpp  robot-wrapper.cpp  robot-wrapper.hpp
bindings/python/solvers/: HQPData.cpp  HQPData.hpp  HQPOutput.cpp  HQPOutput.hpp  expose-solvers.hpp  solver-HQP-eiquadprog.cpp  solver-HQP-eiquadprog.hpp
bindings/python/tasks/: expose-tasks.hpp  task-actuation-bounds.cpp  task-actuation-bounds.hpp  task-actuation-equality.cpp  task-am-equality.cpp  task-am-equality.hpp  task-com-equality.cpp  task-com-equality.hpp  task-contact-force-equality.cpp  task-cop-equality.cpp  task-energy.cpp  task-joint-bounds.cpp  task-joint-bounds.hpp  task-joint-posVelAcc-bounds.cpp  task-joint-posture.cpp  task-joint-posture.hpp  task-point-equality.cpp  task-point-equality.hpp  task-se3-equality.cpp  task-se3-equality.hpp  task-two-frames-equality.cpp
bindings/python/trajectories/: expose-trajectories.hpp  trajectory-base.cpp  trajectory-base.hpp  trajectory-euclidian.cpp  trajectory-euclidian.hpp  trajectory-se3.cpp  trajectory-se3.hpp
bindings/python/tsid/: __init__.py
bindings/python/utils/: container.hpp
cmake2/: ide.cmake
demo/: demo_anymal.py  demo_quadruped.py  demo_romeo.py  demo_talos_gripper_closed_kinematic_chain.py  demo_tsid_talos_gripper_closed_kinematic_chain.py
doc/: tsid_cheatsheet.tex
exercizes/: RobotSimulation.py  anymal_conf.py  ex_0_ur5_joint_space_control.py  ex_1.py  ex_1_ur5.py  ex_2.py  ex_3_biped_balance_with_gui.py  ex_4_LIPM_to_TSID.py  ex_4_conf.py  ex_4_long_conf.py  ex_4_plan_LIPM_romeo.py  ex_4_talos_conf.py  ex_4_walking.py  ex_anymal.py  ex_kinova.py  ex_neo.py  ex_quadruped.py  ex_quadruped_r.py  ex_sin_track.py  kinova_conf.py  plot_utils.py  romeo_conf.py  talos_arm_conf.py  talos_conf.py  testRaisim.py  test_cop_task.py  tsid_biped.py  tsid_manipulator.py  tsid_quadruped.py  ur5_conf.py  ur5_reaching_conf.py  vizutils.py
exercizes/LMPC_walking/: README.md
exercizes/Quadruped/: tsid_quadruped.py
exercizes/notebooks/: TSID_ex1.ipynb  (+9 more)
launch/: rviz.launch
script/: test_Constraint.py  test_Contact.py  test_ContactPoint.py  test_Formulation.py  test_RobotWrapper.py  test_Solvers.py  test_Tasks.py  test_Trajectories.py
src/: CMakeLists.txt  commandPublisher.py  controller.py  inverse-dynamics-formulation-acc-force.cpp  inverse-dynamics-formulation-base.cpp  quadEx.py  quadruped.py  robot-wrapper.cpp  robotSimulation.py  testRaisim.py
src/contacts/: contact-6d.cpp  contact-base.cpp  contact-point.cpp  contact-two-frame-positions.cpp  contact-two-frames.cpp  measured-3Dforce.cpp  measured-3d-force.cpp  measured-6Dwrench.cpp  measured-6d-wrench.cpp  measured-force-base.cpp
src/formulations/: contact-level.cpp  inverse-dynamics-formulation-acc-force.cpp  inverse-dynamics-formulation-base.cpp  task-energy-level.cpp  task-motion-level.cpp
src/math/: constraint-base.cpp  constraint-bound.cpp  constraint-equality.cpp  constraint-inequality.cpp  utils.cpp
src/measured-forces/: measured-force-3Dforce.cpp  measured-force-6Dwrench.cpp  measured-force-base.cpp
src/measuredForces/: measured-force-3Dforce.cpp  measured-force-6Dwrench.cpp  measured-force-base.cpp
src/robots/: robot-wrapper.cpp
src/solvers/: eiquadprog-fast.cpp  solver-HQP-base.cpp  solver-HQP-eiquadprog-fast.cpp  solver-HQP-eiquadprog.cpp  solver-HQP-factory.cpp  solver-HQP-qpmad.cpp  solver-base.cpp  solver-osqp.cpp  solver-proxqp.cpp  utils.cpp
src/tasks/: task-actuation-bounds.cpp  task-actuation-equality.cpp  task-actuation.cpp  task-angular-momentum-equality.cpp  task-base.cpp  task-capture-point-inequality.cpp  task-com-equality.cpp  task-contact-force-equality.cpp  task-contact-force.cpp  task-convex-hull-inequality.cpp  task-cop-equality.cpp  task-energy.cpp  task-joint-bounds.cpp  task-joint-posVelAcc-bounds.cpp  task-joint-posture.cpp  task-motion.cpp  task-point-equality.cpp  task-se3-equality.cpp  task-two-frames-equality.cpp
src/trajectories/: trajectory-euclidian.cpp  trajectory-se3.cpp
src/utils/: statistics.cpp  stop-watch.cpp
tests/: CMakeLists.txt  constraints.cpp  contacts.cpp  hqp_solvers.cpp  math_utils.cpp  robot-wrapper.cpp  set_gravity.cpp  tasks.cpp  trajectories.cpp  tsid-formulation.cpp
tests/python/: CMakeLists.txt  generator.py  test_Constraint.py  test_Contact.py  test_ContactPoint.py  test_Deprecations.py  test_Energy.py  test_Formulation.py  test_Formulation_bis.py  test_Gravity.py  test_Measured6DWrench.py  test_RobotWrapper.py  test_Solvers.py  test_Tasks.py  test_Trajectories.py
travis_custom/: custom_before_install  custom_build
unittest/: CMakeLists.txt  constraints.cpp  contacts.cpp  hqp_solvers.cpp  invdyn-formulation.cpp  math_utils.cpp  robot-wrapper.cpp  tasks.cpp  trajectories.cpp  tsid-formulation.cpp
unittest/python/: test_ContactPoint.py
(+200 files in other folders)
