<?xml version="1.0"?>
<package format="3">
  <name>tsid</name>
  <version>1.9.0</version>
  <description>
    Efficient Task Space Inverse Dynamics (TSID) based on Pinocchio
  </description>
  <url>https://github.com/stack-of-tasks/tsid</url>
  <license>BSD-2-Clause</license>
  <author>Andrea Del Prete</author>
  <author>Justin Carpentier</author>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend>pinocchio</depend>
  <depend>eiquadprog</depend>
  <depend>eigenpy</depend>
  <depend>boost</depend>
  <depend>graphviz</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
