[build-system]
build-backend = "cmeel"
requires = ["cmeel[build]", "eiquadprog >= 1.2.6, < 2", "pin[build] >= 2.6.18, < 3"]

[project]
dependencies = ["eiquadprog >= 1.2.6, < 2", "pin >= 2.6.18, < 3"]
description = "A fast and flexible implementation of Rigid Body Dynamics algorithms and their analytical derivatives"
license = "BSD-3-Clause"
name = "tsid"
version = "1.7.0"

[project.urls]
homepage = "https://github.com/cmake-wheel/tsid"
upstream = "https://github.com/stack-of-tasks/tsid"

[tool.cmeel]
build-number = 1
configure-args = ["-DSUFFIX_SO_VERSION=OFF"]

[tool.isort]
profile = "black"

[tool.tomlsort]
all = true
