[build-system]
build-backend = "cmeel"
requires = [
  "cmeel-boost >= 1.87.0, < 1.88",
  "cmeel[build]",
  "coal-library[build] >= 3, < 4",
  "eiquadprog",
  "pin[build]",
  "scipy"
]

[project]
dependencies = [
  "cmeel-boost >= 1.87.0, < 1.88",
  "eiquadprog",
  "pin"
]
description = "A fast and flexible implementation of Rigid Body Dynamics algorithms and their analytical derivatives"
license = "BSD-3-Clause"
name = "tsid"
version = "1.7.0"

[project.urls]
homepage = "https://github.com/cmake-wheel/tsid"
upstream = "https://github.com/stack-of-tasks/tsid"

[tool.cmeel]
build-number = 1
configure-args = ["-DSUFFIX_SO_VERSION=OFF"]

[tool.isort]
profile = "black"

[tool.tomlsort]
all = true
